<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="@dimen/activity_editor_layout_width"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_editor_paddingLeft">

            <TextView
                android:id="@+id/note_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/note_name"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/secondary_text"
                tools:text="Name: " />

            <EditText
                android:id="@+id/edit_book_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />

            <TextView
                android:id="@+id/note_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/note_price"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/secondary_text"
                tools:text="Price: " />

            <EditText
                android:id="@+id/edit_book_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_price"
                android:inputType="number" />

            <TextView
                android:id="@+id/note_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/note_quantity"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/secondary_text"
                tools:text="Quantity: " />

            <EditText
                android:id="@+id/edit_book_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_quantity"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_editor_paddingBottom">

                <Button
                    android:id="@+id/btn_decrease"
                    android:layout_width="@dimen/activity_editor_layout_width_btn"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_editor_marginRight"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:text="@string/btn_decrease"
                    tools:text="-" />

                <Button
                    android:id="@+id/btn_increase"
                    android:layout_width="@dimen/activity_editor_layout_width_btn"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:text="@string/btn_increase"
                    tools:text="+" />
            </LinearLayout>

            <TextView
                android:id="@+id/note_supplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/note_supplier"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/secondary_text"
                tools:text="Supplier name: " />

            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords" />

            <TextView
                android:id="@+id/note_supplier_mob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/note_supplier_mob"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/secondary_text"
                tools:text="Supplier mob.: " />

            <EditText
                android:id="@+id/edit_supplier_phone_number"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_phone_number"
                android:inputType="number" />

            <Button
                android:id="@+id/btn_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@string/btn_call"
                tools:text="CALL SUPPLIER" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
