<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/primary_text"
        tools:text="Name" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/note_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingRight="@dimen/list_item_paddingRight"
            android:text="@string/note_price"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/primary_text"
            tools:text="99.99" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/note_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingRight="@dimen/list_item_paddingRight"
            android:text="@string/note_quantity"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/secondary_text"
            tools:text="Quantity:" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/primary_text"
            tools:text="100" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/note_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingRight="@dimen/activity_editor_marginRight"
            android:text="@string/note_supplier"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/secondary_text"
            tools:text="Supplier:" />

        <TextView
            android:id="@+id/supplier_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/primary_text"
            tools:text="John Doe" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/note_supplier_mob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:paddingRight="@dimen/activity_editor_marginRight"
            android:text="@string/note_supplier_mob"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/secondary_text"
            tools:text="supplier mob.:" />

        <TextView
            android:id="@+id/supplier_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/primary_text"
            tools:text="123 456 789" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_sale"
            android:layout_width="@dimen/list_item_layout_width_btn"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:text="@string/btn_sale"
            tools:text="SALE" />
    </LinearLayout>
</LinearLayout>